--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -171,6 +171,17 @@ pages ="2306--2333",
 author = "Saut, O. and Lagaert, J-B. and Colin, T. and Fathallah-Shaykh, H."
 }
 
+@article{macklin2009multiscale,
+  title={Multiscale modelling and nonlinear simulation of vascular tumour growth},
+  author={Macklin, Paul and McDougall, Steven and Anderson, Alexander RA and Chaplain, Mark AJ and Cristini, Vittorio and Lowengrub, John},
+  journal={Journal of mathematical biology},
+  volume={58},
+  number={4-5},
+  pages={765--798},
+  year={2009},
+  publisher={Springer}
+}
+
 @article{Bresch2010,
 author = {Bresch, D. and Colin, T. and Grenier, E. and Ribba, B. and Saut, O.},
 title = {Computational Modeling of Solid Tumor Growth: The Avascular Stage},
