--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -193,7 +193,7 @@ Afin de correctement traduire l'\hetero, il est nécessaire de fournir une fonct
 \item $\mathscr{H}=0.1$~: très homogène
 \end{myitemize}
 
-\paragraph{Comment visuellement bien apprécier l'\hetero ?}
+\subsubsection*{Comment visuellement bien apprécier l'\hetero ?}
 Pour correctement classifier les images dans les 5 catégories que nous venons de dresser, il est nécessaire de savoir précisément ce que l'on entend~: à quoi correspond une \hetero de 0\,\% ? de 100\,\% ? Une \hetero nulle (\ie homogénéité parfaite) correspond à un aplat d'une seule et unique couleur. A l'opposé, étant données 2 couleurs bien distinctes, on dira que l'\hetero est maximale, si  ces 2 couleurs occupent chacune la moitié de la zone considérée. Une \hetero intermédiaire pourra être un cas où~:
 \begin{myitemize}
 \item soit les 2 couleurs sont relativement proches,
