--- a/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
+++ b/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
@@ -450,7 +450,8 @@ ou bien tel que~$\tau_N{\gg}\tau_S$ ce qui est aberrant.
 %Notons que l'algorithme basé sur la méthode des moindres carrés semble moins touché par ce problème. 
 Ces erreurs pourraient être dues notamment au fait que la pénalisation choisie \eqref{eq:penalisation_creneau} présente une discontinuité. 
 Les algorithmes de descente fonctionnant sur une approximation du gradient peuvent ainsi être perturbés par cette discontinuité aux abords des bornes autorisées. Dans l'annexe~\ref{chap:anx_penalisation} page~\pageref{chap:anx_penalisation}, l'enquête menée sur les fonctions de pénalisation est présentée. 
-Des pénalisations plus régulières ont été testées (parabole tronquée et parabole tronquée régularisée) mais n'améliorent que très peu le résultat final. Ceci nous amène à penser que ce n'est donc pas la régularité de la pénalisation qui est à mettre en cause mais les données elles-mêmes. Certaines combinaisons d'images fourniraient donc de mauvais résultats, d'autres de bons.  
+Des pénalisations plus régulières ont été testées (parabole tronquée et parabole tronquée régularisée) mais n'améliorent que très peu le résultat final. Ceci nous amène à penser que ce n'est donc pas la régularité de la pénalisation qui est à mettre en cause mais que ce sont les données elles-mêmes. 
+Certaines combinaisons d'images fourniraient donc de mauvais résultats, d'autres de bons.  
 
 
 \subsubsection*{Pourquoi y-a-t-il des cas convergents et d'autres non ?\label{subsec:pb_condi}}
