--- a/manuscrit_G_LEFEBVRE/chap_trefle.tex
+++ b/manuscrit_G_LEFEBVRE/chap_trefle.tex
@@ -39,7 +39,7 @@ Sur la Figure~\ref{fig:trefle}, est présentée une simulation numérique du mod
 \subfloat[Jour 1053]{\label{fig_chen_simu_spatial_4}
 \includegraphics[width=0.33\textwidth]
 {track_10x10_7/vue_S/65.png}}
-\caption{\label{fig:trefle} Simulations numériques réalisées avec un WENO5 pour le transport et un Laplacien classique à 5 points pour la diffusion. Partant d'une donnée initiale circulaire, 
+\caption{\label{fig:trefle} Simulations numériques réalisées avec un WENO5 pour le transport et un laplacien classique à 5 points pour la diffusion. Partant d'une donnée initiale circulaire, 
 une structure en forme de trèfle apparaît.}
 \end{figure}
 Partant d'une donnée initiale irrotationelle, on constate que la simulation numérique peut générer une structure en forme de trèfle, comme présentée  sur la Figure~\ref{fig:trefle}, alors que la forme circulaire devrait être préservée. 
