--- a/manuscrit_G_LEFEBVRE/resume.tex
+++ b/manuscrit_G_LEFEBVRE/resume.tex
@@ -5,12 +5,12 @@
 
 \subsection*{\titrefr}
 \vfill
-\paragraph{Résumé~:} Cette thèse présente les travaux menés sur l'analyse et la modélisation de l'\hetero tumorales lors de résistances aux traitements. 
-Nous présentons ici un modèle EDP, dépendant de chaque patient, et prenant en compte deux types de traitements différents. Il reproduit qualitativement et quantitativement les différentes étapes de la croissance d'une tumeur soumise à ces traitements. Afin de pallier à une instabilité numérique lié à ce type de modélisation, un nouveau schéma numérique est construit~: le \twinweno. 
-Nous développons ensuite une méthode de synthèse d'images scanners de sorte à permettre une meilleure comparaison entre les résultats numériques et les données cliniques.  
+\paragraph{Résumé~:} Cette thèse présente les travaux menés sur l'analyse et la modélisation de l'\hetero tumorale lors de résistance aux traitements. 
+Nous présentons ici un modèle EDP, dépendant de chaque patient, et prenant en compte deux types de traitements différents. Il reproduit qualitativement et quantitativement les différentes étapes de la croissance d'une tumeur soumise à ces traitements. Afin de pallier à une instabilité numérique liée à ce type de modélisation, un nouveau schéma numérique est construit~: le \twinweno. 
+Nous développons ensuite une méthode de synthèse d'images scanners de sorte à rendre meilleur la comparaison entre les résultats numériques et les données cliniques.  
 Enfin un critère robuste permettant de quantifier l'\hetero à la fois des images cliniques et des images de synthèse, est construit. 
 
-\paragraph{Mots-clés~:} modélisation, simulation numérique, cancer, croissance tumorale, \hetero tumorale, résistances aux traitements
+\paragraph{Mots-clés~:} modélisation, simulation numérique, cancer, croissance tumorale, \hetero tumorale, résistance aux traitements
 
 \vfill
 \hrule
